--- a/scss/oldalak/_keszsegeim.scss
+++ b/scss/oldalak/_keszsegeim.scss
@@ -7,7 +7,7 @@ body, body[data-theme="hc-off"]
 {
        .keszsegeim-s
        {
-              padding-top: 7rem;
+              padding-top: 3rem;
               background-image: url(/pics/háttérpng.png);
               -webkit-background-size:cover;
               background-size: cover;
@@ -28,7 +28,7 @@ body, body[data-theme="hc-off"]
        {
               color: $szoveg;
               font-weight: 400;
-              font-size: 21px;
+              font-size: 25px;
               margin: 1rem 1rem 1rem 1rem ;
               line-height: 2rem;
               padding: 1rem 1rem 2rem 1rem ;
@@ -42,7 +42,7 @@ body, body[data-theme="hc-off"]
               height: 2px;
               background:white ;
               color: white;
-              margin-top: 5rem;
+              margin-top: 2rem;
        }
 
        .table-text
@@ -55,7 +55,7 @@ body, body[data-theme="hc-off"]
        .table-head-text
        {
               color: $lila;
-              font-size: 15px;
+              font-size: 19px;
               font-weight: 500;
        }
 
@@ -78,7 +78,7 @@ body, body[data-theme="hc-off"]
 
        .line-div
        {
-              padding-top: 5rem;
+              padding-top: 4rem;
        }
        .keszseg-cim{
               margin: 0;
@@ -89,5 +89,8 @@ body, body[data-theme="hc-off"]
        .keszsegeim-row{
               padding: 0;
               margin: 0;
+       }
+       .keszsegeim-felirat{
+              font-size: 43px;
        }
 }
