--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,7 +3,7 @@
 $sotetebb: #141414;
 $sotet: #181818;
 $vilagos: #747474;
-$vilagosabb: #9e9e9e;
+$vilagosabb: #a9a9a9;
 $lila: #9f00cf;
 $hatter: #424242;
 $hatter1: #757575;
