--- a/scss/oldalak/_highcontrast.scss
+++ b/scss/oldalak/_highcontrast.scss
@@ -13,7 +13,7 @@ body[data-theme="hc-on"]
        h3, .footer-text
        {
               font-weight: 500;
-              font-size: 19px;
+              font-size: 20px;
               color: black;
        }
 
@@ -25,7 +25,7 @@ body[data-theme="hc-on"]
        li, a
        {
               color: black;
-              font-weight: 450px;
+              font-weight: 470px;
        }
 
        .fooldal-s, .btn-small
@@ -60,14 +60,14 @@ body[data-theme="hc-on"]
        .bev-text, .form-check-label, .szabalyzat, .social-text, .keszsegeim-text
        {
               color: yellow;
-              font-size: 27px;
+              font-size: 29px;
               font-weight: 500;
        }
 
        .table-head-text, .table-text
        {
               color: yellow;
-              font-size: 19px;
+              font-size: 21px;
               font-weight: 500;
        }
 
@@ -77,7 +77,7 @@ body[data-theme="hc-on"]
               color: yellow;
        }
 
-       .cim, .checkbox-text, label, h1, h2, .nav-link, .btn-outline-secondary, .rolam-links, figcaption, .line-text, p
+       .evszam, .cim, .checkbox-text, label, h1, h2, .nav-link, .btn-outline-secondary, .rolam-links, figcaption, .line-text, p
        {
               color: yellow;
        }
@@ -85,7 +85,7 @@ body[data-theme="hc-on"]
        .table-head-text2
        {
               color: yellow;
-              font-size: 17px;
+              font-size: 19px;
               font-weight: 600;
        }
 
@@ -97,19 +97,19 @@ body[data-theme="hc-on"]
 
        a
        {
-              font-weight: 600;         
+              font-weight: 620;         
        }
        
        header
        {
-              font-weight: 550;
+              font-weight: 570;
               color: yellow;
        }
 
-       .evszam, .isk-text-h, .isk-text-a, h4
+       .isk-text-h, .isk-text-a, h4
        {
               color: yellow;
-              font-size:21px;
+              font-size:23px;
        }
 
 }
